<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/pattern_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30px"
        android:gravity="right"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnGoMain"
            android:layout_width="90px"
            android:layout_height="48px"
            android:onClick="btnMenu"
            android:text="@string/btnGoMain"
            android:textColor="#083762"
            android:textSize="17px" />

        <Button
            android:id="@+id/btnShutdown"
            android:layout_width="111px"
            android:layout_height="48px"
            android:onClick="btnMenu"
            android:text="@string/btnShutdown"
            android:textColor="#083762"
            android:textSize="17px" />

        <Button
            android:id="@+id/btnOtherUser"
            android:layout_width="149px"
            android:layout_height="48px"
            android:onClick="btnMenu"
            android:text="@string/btnOtherUser"
            android:textColor="#083762"
            android:textSize="17px" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txtWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="10px"
            android:textColor="#083762"
            android:textSize="20px" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/msgWelcome"
            android:textColor="#083762"
            android:textSize="20px" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="10px"
        android:text="@string/msgLevelSel"
        android:textColor="#083762"
        android:textSize="20px" />

    <Button
        android:id="@+id/btnLevel1"
        android:layout_width="320px"
        android:layout_height="80px"
        android:layout_gravity="center"
        android:onClick="btnLevelSel"
        android:text="@string/btnLevel1"
        android:textColor="#083762"
        android:textSize="35px" />

    <Button
        android:id="@+id/btnLevel2"
        android:layout_width="320px"
        android:layout_height="80px"
        android:layout_gravity="center"
        android:onClick="btnLevelSel"
        android:text="@string/btnLevel2"
        android:textColor="#083762"
        android:textSize="35px" />

    <Button
        android:id="@+id/btnLevel3"
        android:layout_width="320px"
        android:layout_height="80px"
        android:layout_gravity="center"
        android:onClick="btnLevelSel"
        android:text="@string/btnLevel3"
        android:textColor="#083762"
        android:textSize="35px" />

    <Button
        android:id="@+id/btnLevel4"
        android:layout_width="320px"
        android:layout_height="80px"
        android:layout_gravity="center"
        android:onClick="btnLevelSel"
        android:text="@string/btnLevel4"
        android:textColor="#083762"
        android:textSize="35px" />

    <Button
        android:id="@+id/btnLevel5"
        android:layout_width="320px"
        android:layout_height="80px"
        android:layout_gravity="center"
        android:onClick="btnLevelSel"
        android:text="@string/btnLevel5"
        android:textColor="#083762"
        android:textSize="35px" />

</LinearLayout>