<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/pattern_bg"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10px"
        android:layout_marginTop="80px"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="200dip"
            android:layout_height="80px"
            android:text="@string/addUser_name"
            android:textColor="#083762"
            android:textSize="35px" />

        <EditText
            android:id="@+id/edtName"
            android:layout_width="250dip"
            android:layout_height="80px"
            android:imeOptions="flagNoExtractUi"
            android:inputType="text"
            android:textSize="35px" />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10px"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="200dip"
            android:layout_height="80px"
            android:text="@string/addUser_ID"
            android:textColor="#083762"
            android:textSize="35px" />

        <EditText
            android:id="@+id/edtID"
            android:layout_width="250dip"
            android:layout_height="80px"
            android:imeOptions="flagNoExtractUi"
            android:inputType="text"
            android:textSize="35px" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10px"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="200dip"
            android:layout_height="80px"
            android:text="@string/addUser_birth"
            android:textColor="#083762"
            android:textSize="35px" />

        <Button
            android:id="@+id/btnBirth"
            android:layout_width="250dip"
            android:layout_height="80px"
            android:onClick="popup"
            android:text="@string/addUser_birthChoice"
            android:textColor="#083762"
            android:textSize="35px" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10px"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="200dip"
            android:layout_height="80px"
            android:text="@string/addUser_sex"
            android:textColor="#083762"
            android:textSize="35px" />

        <Button
            android:id="@+id/btnSex"
            android:layout_width="250dip"
            android:layout_height="80px"
            android:onClick="popup"
            android:text="@string/addUser_sexChoice"
            android:textColor="#083762"
            android:textSize="35px" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10px"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="200dip"
            android:layout_height="80px"
            android:text="@string/addUser_part"
            android:textColor="#083762"
            android:textSize="35px" />

        <Button
            android:id="@+id/btnPart"
            android:layout_width="250px"
            android:layout_height="80px"
            android:onClick="popup"
            android:text="@string/addUser_partChoice"
            android:textColor="#083762"
            android:textSize="35px" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_gravity="right"
        android:layout_marginBottom="40px"
        android:gravity="bottom"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnNext"
            android:layout_width="150px"
            android:layout_height="80px"
            android:onClick="popup"
            android:text="@string/btnNext"
            android:textColor="#083762"
            android:textSize="30px" />

        <Button
            android:id="@+id/btnClose"
            android:layout_width="150px"
            android:layout_height="80px"
            android:onClick="popup"
            android:text="@string/btnExit"
            android:textColor="#083762"
            android:textSize="30px" />
    </LinearLayout>

</LinearLayout>