<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/pattern_bg"
    android:gravity="center"
    android:orientation="vertical" >

    <!-- 환자리스트 버튼 -->

    <Button
        android:id="@+id/list"
        android:layout_width="800px"
        android:layout_height="wrap_content"
        android:layout_margin="35px"
        android:onClick="moveAct"
        android:text="@string/main_list"
        android:textColor="#083762"
        android:textSize="60px" />

    <!-- 신규 사용자 등록 버튼 -->

    <Button
        android:id="@+id/addList"
        android:layout_width="800px"
        android:layout_height="wrap_content"
        android:layout_margin="35px"
        android:onClick="moveAct"
        android:text="@string/main_adduser"
        android:textColor="#083762"
        android:textSize="60px" />

    <!-- 시스템 설정 버튼 -->

    <Button
        android:id="@+id/setting"
        android:layout_width="800px"
        android:layout_height="wrap_content"
        android:layout_margin="35px"
        android:onClick="moveAct"
        android:text="@string/main_setting"
        android:textColor="#083762"
        android:textSize="60px" />

    <!-- 시스템 종료 버튼 -->

    <Button
        android:id="@+id/exit"
        android:layout_width="800px"
        android:layout_height="wrap_content"
        android:layout_margin="35px"
        android:onClick="moveAct"
        android:text="@string/main_exit"
        android:textColor="#083762"
        android:textSize="60px" />

</LinearLayout>